--- a/views/modificar.html
+++ b/views/modificar.html
@@ -117,11 +117,11 @@
                                 <label class="label required">Origen indígena</label>
                                 <div class="control">
                                     <label class="radio">
-                                        <input type="radio" name="origenIndigena" value="Si">
+                                        <input type="radio" name="origenIndigena" value="1">
                                         Sí
                                     </label>
                                     <label class="radio">
-                                        <input type="radio" name="origenIndigena" value="No">
+                                        <input type="radio" name="origenIndigena" value="0">
                                         No
                                     </label>
                                 </div>
@@ -252,17 +252,17 @@
                         <label class="label required">¿Ha estado en programa PIE?</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="programaPIE" value="Si">
+                                <input type="radio" name="programaPIE" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="programaPIE" value="No">
+                                <input type="radio" name="programaPIE" value="0">
                                 No
                             </label>
                         </div>
                     </div>
 
-                    <div class="field">
+                    <div la="field">
                         <label class="label">Plan al que postula</label>
                         <div class="control">
                             <div class="select is-fullwidth">
@@ -277,11 +277,11 @@
                         <label class="label required">Alérgico al medicamento</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="alergicoMedicamento" value="Si">
+                                <input type="radio" name="alergicoMedicamento" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="alergicoMedicamento" value="No">
+                                <input type="radio" name="alergicoMedicamento" value="0">
                                 No
                             </label>
                         </div>
@@ -310,11 +310,11 @@
                         <label class="label required">Realiza Educación Física</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="realizaEducacionFisica" value="Si">
+                                <input type="radio" name="realizaEducacionFisica" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="realizaEducacionFisica" value="No">
+                                <input type="radio" name="realizaEducacionFisica" value="0">
                                 No
                             </label>
                         </div>
@@ -326,11 +326,11 @@
                         <label class="label required">Certificado de Nacimiento</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="certificadoNacimiento" value="Si">
+                                <input type="radio" name="certificadoNacimiento" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="certificadoNacimiento" value="No">
+                                <input type="radio" name="certificadoNacimiento" value="0">
                                 No
                             </label>
                         </div>
@@ -340,11 +340,11 @@
                         <label class="label required">Informe de personalidad</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="informePersonalidad" value="Si">
+                                <input type="radio" name="informePersonalidad" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="informePersonalidad" value="No">
+                                <input type="radio" name="informePersonalidad" value="0">
                                 No
                             </label>
                         </div>
@@ -354,25 +354,25 @@
                         <label class="label required">Informe parcial de notas</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="informeNotas" value="Si">
+                                <input type="radio" name="informeNotas" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="informeNotas" value="No">
+                                <input type="radio" name="informeNotas" value="0">
                                 No
                             </label>
                         </div>
                     </div>
 
-                    <div class="field">
+                    <div la="field">
                         <label class="label required">Certificado anual de estudios</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="certificadoEstudios" value="Si">
+                                <input type="radio" name="certificadoEstudios" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="certificadoEstudios" value="No">
+                                <input type="radio" name="certificadoEstudios" value="0">
                                 No
                             </label>
                         </div>
@@ -382,11 +382,11 @@
                         <label class="label required">Ficha firmada por Apoderado</label>
                         <div class="control">
                             <label class="radio">
-                                <input type="radio" name="fichaFirmada" value="Si">
+                                <input type="radio" name="fichaFirmada" value="1">
                                 Sí
                             </label>
                             <label class="radio">
-                                <input type="radio" name="fichaFirmada" value="No">
+                                <input type="radio" name="fichaFirmada" value="0">
                                 No
                             </label>
                         </div>
@@ -405,7 +405,7 @@
                         </div>
                     </div>
 
-                    <div class="field">
+                    <div la="field">
                         <label class="label">Alumno que recomendó el establecimiento</label>
                         <div class="control">
                             <input class="input" type="text" name="alumnoRecomendo">
@@ -426,7 +426,7 @@
                     </div>
 
                     <div class="columns">
-                        <div class="column is-half">
+                        <div la="column is-half">
                             <div class="field">
                                 <label class="label">¿Qué quiere ser cuando grande y por qué?</label>
                                 <div class="control">
@@ -549,7 +549,7 @@
                     <div class="columns">
                         <div class="column is-half">
                             <div class="field">
-                                <label class="label">Teléfono</label>
+                                <label la="label">Teléfono</label>
                                 <div class="control">
                                     <input class="input" type="text" name="telefonoFamiliar">
                                 </div>
@@ -574,13 +574,7 @@
                                 <div class="control">
                                     <div class="select is-fullwidth">
                                         <select name="parentesco" id="parentesco">
-                                            <option value="">** Seleccione **</option>
-                                            <option value="Padre">Padre</option>
-                                            <option value="Madre">Madre</option>
-                                            <option value="Hermano/a">Hermano/a</option>
-                                            <option value="Abuelo/a">Abuelo/a</option>
-                                            <option value="Tío/a">Tío/a</option>
-                                            <option value="Otro">Otro</option>
+                                            <option value="">** Cargando parentescos... **</option>
                                         </select>
                                     </div>
                                 </div>
@@ -589,9 +583,7 @@
                         <div class="column is-half">
                             <div class="field">
                                 <div class="control">
-                                    <button type="button" class="button is-info" id="btnCopiarComoApoderado">
-                                        Copiar como Apoderado
-                                    </button>
+                                    <button type="button" class="button is-info" id="btnCopiarComoApoderado">Copiar como Apoderado</button>
                                 </div>
                             </div>
                         </div>
@@ -662,13 +654,11 @@
                             <div class="field">
                                 <label class="label">Género</label>
                                 <div class="control">
-                                    <div class="select is-fullwidth">
-                                        <select name="generoFamiliar" id="generoFamiliar">
-                                            <option value="">** Seleccione **</option>
-                                            <option value="Masculino">Masculino</option>
-                                            <option value="Femenino">Femenino</option>
-                                        </select>
-                                    </div>
+                                    <select name="generoFamiliar" id="generoFamiliar">
+                                        <option value="">** Seleccione **</option>
+                                        <option value="1">Masculino</option>
+                                        <option value="2">Femenino</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -730,12 +720,7 @@
                         <div class="control">
                             <div class="select">
                                 <select name="tipoApoderado" id="tipoApoderado">
-                                    <option value="">** Seleccione **</option>
-                                    <option value="Madre">Madre</option>
-                                    <option value="Padre">Padre</option>
-                                    <option value="Abuelo/a">Abuelo/a</option>
-                                    <option value="Tío/a">Tío/a</option>
-                                    <option value="Otro">Otro</option>
+                                    <option value="">** Cargando parentescos... **</option>
                                 </select>
                             </div>
                             <span class="ml-2">(*) Según la selección se autocompletará con la información de
@@ -833,7 +818,7 @@
                                 <label class="label required">Comuna</label>
                                 <div class="control">
                                     <div class="select is-fullwidth">
-                                        <select name="idComunaApoderado" id="comunaApoderado">
+                                        <select name="idComunaApoderado" id="idComunaApoderado">
                                             <option value="">** Cargando comunas... **</option>
                                         </select>
                                     </div>
@@ -888,7 +873,7 @@
                         </div>
                     </div>
 
-                    <div class="columns">
+                    <div la="columns">
                         <div class="column is-half">
                             <div class="field">
                                 <label class="label">Email 3:</label>
@@ -953,7 +938,7 @@
             </div>
 
             <!-- Botón para guardar -->
-            <div class="field mt-5">
+            <div la="field mt-5">
                 <div class="control">
                     <button class="button is-primary" id="guardarCambios">Actualizar Información</button>
                 </div>
