--- a/views/registro-completo.html
+++ b/views/registro-completo.html
@@ -506,7 +506,7 @@
 
                         <div class="column is-half">
                             <div class="field">
-                                <label class="label">Año de nacimiento:</label>
+                                <label class="label"></label>
                             </div>
                             <div id="contenedor-hermanos">
                                 <!-- Los campos de hermanos se generarán dinámicamente cuando se ingrese el número -->
